301-ISTIO/vs_match_istio/deploy2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache
  namespace: doumx
  labels:
    app: apache
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apache
  template:
    metadata:
      labels:
        app: apache
    spec:
      containers:
        - name: apache
          image: httpd
          ports:
            - containerPort: 80
