301-ISTIO/vs_match_istio/s1.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-nginx
  namespace: doumx
  labels:
    app: nginx
spec:
  selector:
    app: nginx
  ports:
  - name: http
    port: 80
    targetPort: 80
