301-ISTIO/vs_match_istio/s2.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-apache
  namespace: akolacz
  labels:
    app: apache
spec:
  selector:
    app: apache
  ports:
  - name: http
    port: 80
    targetPort: 80
