301-ISTIO/vs_match_istio/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginxorapache
  namespace: doumx
spec:
  hosts:
  - "test.unstable.ecom.gl.rocks"
  gateways:
  - istio-system/https-gateway 
  http:
  - match:
    - uri:
        prefix: /nginx
    rewrite:
      uri: "/"
    route:
    - destination:
        host: "service-nginx"
  - match:
    - uri:
        prefix: /apache
    rewrite:
      uri: "/"
    route:
    - destination:
        host: "service-apache"
